--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,10 +1,10 @@
 project:
-  type: website          # Tells Quarto this is a website project
-  output-dir: docs       # Where the rendered HTML will be stored
+  type: website
+  output-dir: docs
 
 website:
-  title: "BDS Toolbox 2025"
-  description: "Master’s course on data visualization and the data science toolbox."
+  title: "Data Visualization 2025"
+  description: "Part of the BDS Toolbox course in the Behavioral Data Science Master's at the University of Amsterdam"
   site-url: https://ann1ejohansson.github.io/bds-toolbox-2025/
 
   navbar:
@@ -12,16 +12,22 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: syllabus.qmd
-        text: Syllabus
-      - text: Slides
+      - href: https://github.com/ann1ejohansson/bds-toolbox-2025
+        text: GitHub Repository
+      - href: slides/slides.html
+        text: Slides
+      - href: assignments/assignment-1.html
+        text: Assignment 1
+      - href: assignments/assignment-2.html
+        text: Assignment 2
+      - text: Resources
         menu:
-          - href: slides/01-intro.html
-            text: "Lecture 1: Introduction"
-          - href: slides/02-design.html
-            text: "Lecture 2: Design Principles"
-          - href: slides/03-tools.html
-            text: "Lecture 3: Tools & Workflows"
+          - href: https://socviz.co/
+            text: "Data Visualization: A Practical Introduction (Healy)"
+          - href: https://r4ds.hadley.nz/data-visualize.html
+            text: "R for Data Science - Data visualization chapter"
+          - href: https://canvas.uva.nl/courses/47312/modules
+            text: "Videos on Canvas"
 
 format:
   html:
