--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
   site-url: https://ann1ejohansson.github.io/bds-toolbox-2025/
 
   navbar:
-    background: primary  # Optional color
+    background: dark  # Optional color
     left:
       - href: index.qmd
         text: Home
