--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,14 +5,14 @@ project:
 website:
   title: "Data Visualization 2025"
   description: "Part of the BDS Toolbox course in the Behavioral Data Science Master's at the University of Amsterdam"
-  site-url: https://ann1ejohansson.github.io/bds-toolbox-2025/
+  site-url: https://ann1ejohansson.github.io/data-visualization-2025/
 
   navbar:
     background: dark
     left:
       - href: index.qmd
         text: Home
-      - href: https://github.com/ann1ejohansson/bds-toolbox-2025
+      - href: https://github.com/ann1ejohansson/data-visualization-2025
         text: GitHub Repository
       - href: slides/slides.qmd
         text: Slides
