--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ website:
             text: "Working on the server"
           - href: documents/git-workflow.qmd
             text: "Working with Git"
-          - href: https://ann1ejohansson.github.io/data-visualization-2025/documents/plotly_2025.html
+          - href: documents/ggplotly-handout.qmd
             text: "ggplotly"
           - href: https://socviz.co/
             text: "Data Visualization: A Practical Introduction (Healy)"
